Menambahkan folder aplikasi desktop

--- a/BayesianUI/Form2.resx
+++ b/BayesianUI/Form2.resx
@@ -123,4 +123,81 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>184, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAAAAAAAAAAAAAAAAAAAA
+        AABJPzX/UEU6/1JIPP9USj7/VkxA/1ZNQf9YTkL/WlBE/1tSRf9cU0T/XFRF/2BVR/9gVkj/YFZI/2BW
+        R/9gVUf/YVZI/2BWSP9fVUf/XlVI/11UR/9cU0f/XFJF/1xSRv9aUEP/V05B/1ZMQP9USz//U0k+/1BG
+        PP9ORDr/TEI3/1BFOv9TST7/VkxA/1pQQ/9bUUX/W1FF/1xTR/9eVUn/YVdL/2JYSf9jWUr/ZVpK/2Vb
+        S/9nXUz/aF1N/2ddTP9nXEv/Z1xM/2ZbTP9lXEz/ZFpM/2RaTP9jWUv/YVZI/15VSP9cUkX/XFJF/1pP
+        Q/9YTUH/Vks+/1JGPP9ORDr/V0w//1lPQf9cUkP/X1VF/2JXSP9fVkj/YFZH/2JZSf9kXEv/aF5M/21i
+        S/9tYkr/bGFN/2xhTP9vYUn/cmJI/3JhR/9uYEr/bGBN/2lfTf9mXU3/ZlxM/2ZcS/9kWkr/YllJ/2FW
+        Rf9iVkX/ZFhI/2RXRP9dUUD/V0s8/1FFOf9aT0D/X1VF/2NZR/9jWUb/aFxI/2ldRv9rXkX/bWBF/3Vl
+        R/+AbEj/i3RK/5d8S/+gg0v/q4xN/7eWUf/Dn1P/v5xQ/66PTv+fgkz/kXdI/4VvRv97Z0X/c2NG/3Fi
+        Rv9vYUf/bWBJ/2xfSf9tYEv/al1I/2BVRP9XTT//VEs+/2FXR/9nXEn/bWFM/3JlTv97bFH/hHNS/4x6
+        VP+Zg1T/rI9V/8ulWP/juV3/9NBe//3mYv//83P///uU///+qP///p7///Z+///pZv/411z/6b9a/9Gp
+        WP+3llT/n4RS/455Uf+CclL/emtR/3NmT/9rX0v/ZVpJ/2BVRv9cUkT/aV5N/29jUP94a1T/gXNX/4x8
+        W/+WhF7/oY5h/7ehaf/HsW//z7ds/9zCbf/pz3D/8dhx//jfcP/54W//+eJt//jhbP/13G3/8dZt/+nM
+        bP/bwG3/y7Rq/8Gra/+7pWz/o5Bh/5OBW/+KeVn/f3BV/3dpU/9wZFD/aF1M/2FXSP9rX03/cmZS/3tu
+        Vf+IeVr/loVd/6COYP+8pmr/oY5X/3FkQP9mWz7/al8+/3BkP/95a0D/hXNB/5N9Qv+mikX/noND/4d0
+        Qv+Ab0H/eGlC/3BlRP9pX0X/ZlxC/3xtRP+vmmD/ppJh/5F/Wf+Gdlb/emxT/3NmUP9rYE3/ZVpK/21g
+        S/91Z1D/f3BU/4x7Wf+biFv/tqFk/4R0Sf9iYFv/goGA/316d/92cGz/c21p/3Ntaf94cWv/e3Ns/35z
+        av98c2r/eXJs/3Zwav92cGz/eHNw/396eP+HhIL/dnV0/1lQO/+jkFT/oY1c/4t5VP9+b1H/dmhP/21g
+        S/9mW0j/bV9J/3dpTv+EdFT/kH9Z/6qWYf+Vg1D/goGC/4uJif9DOzT/LSIa/ygcFP8pHRT/Kh4V/yEV
+        C/8YCwH/GAwD/xoNBP8eEgj/KRwT/zAkGv8qHBH/HRAG/zsuJP9vZ1//k5SZ/3NpS/+rlVb/k4BW/4R0
+        Uv94ak//bmFL/2ZaR/9sXkf/eGpO/4h3VP+Yhlr/qZRX/6OYff+Ni5D/IxcP/yQYD/8nHBP/KR4W/yMX
+        D/8aDgX/OjEp/21nYf+Vj4r/gnx3/1NLRf8qHxj/HxII/zsuI/95dG7/Nikg/yMVC/9YUEv/o6Od/5+L
+        T/+ch1b/hXRS/3lqUP9vYkv/ZVlG/2teRv95ak7/inlU/5qHWf+ynF3/vLWj/zszMv8lGRL/JRoW/yYc
+        F/8mGxT/NSsk/5iUkf/Jx8P/2NbT/9vY1v/f3Nj/19TP/768uf9qYl7/QjMo/83Iw/82KiL/Mygg/yoe
+        E/+IhIL/wK96/5mDTf+Id1H/e2xO/3BiSv9oW0f/bV9H/3pqTv+KeFP/mIRU/72oa/+gm4//JBoY/y8j
+        Gf9fSxz/U0Md/x4SDv9fVU//5uPi/8fEw/+mop//f3l1/5WQjf/Ewb//7Ozp/7q4vP9wURb/1Llz/z0q
+        HP9AMiT/MSUc/1pTUf/EtYr/nIZP/4t5U/97bE7/cGJK/2pcR/9uYEf/eWpM/4p4Uf+YhFT/v6tt/5aR
+        hP8jGRj/OCwe/3tlHf9xXib/IxYP/z4yKv+SjIn/aGBa/3FoYf+Ykov/hH95/2ZeWP+Hgn3/h4KA/0Ir
+        Df+UflT/OS0k/zovJ/82KiL/UktI/76wiP+ii1L/i3pU/3tsUP9vYUn/aFtG/21fR/95akz/inlR/5qG
+        Vv+9qW7/lI6D/yYdG/8zKCP/PC4X/ycXBP8oHBP/W1RN/5uUj//Mycb/7Ovp/+fk4P/u7On/5uPg/7Ov
+        qv9+eHP/Oy0i/2FQQP8sIBn/QDQt/zktJv9XUEz/v7GK/6CKUf+KeFP/e2tO/29hSf9mWUb/bF5H/3ho
+        TP+IdlL/l4NU/8Crb/+Uj4T/KSAd/zUpIP8/NCv/o52Z/+Tj4f/6+vj/9vb4/9HLwv/AuK7/3tvd/8O/
+        uf++ubL/+Pb1/+fj3P/Ov5v/1s23/29nYf86LiT/PjMq/1lSTv++sIz/nodR/6CNYf+EdFT/a15I/2VZ
+        Rf9qXUb/dGVL/4RzUf+ZhFT/yrNw/5WQhf8rIh//PDAm/0Q3Lv9tY1v/npaP/8fCwf+mlnz/lHYv/5N6
+        Lv+Rg2f/bWFZ/15RQv+IgHL/0c7H/7q0rP+Gfnj/U0hC/0A1Lf9BNSz/WVNP/7qsiv+ljVT/mINZ/3xs
+        UP9sXkj/ZFhE/2pdRf9yZEr/gnFR/5yFU/+5o2v/lI+G/y8mJP9ANTD/QTMp/zgrHv8qFwn/Zkwc/7CW
+        T/+0nWL/hmw8/3xnMf9fUUj/fG5j/5KFc/9vYEz/MiQZ/zIkGv9JPCv/ST42/0Q5Mf9cVlL/vK6N/6GJ
+        Uv+LeFT/eWlP/3FjSv9iVkL/aFtF/3BiSv9/b0//jHZI/62YaP+WkYj/LyYl/z8zKf9ZSCb/RDMh/4Bn
+        Nv/CqFb/oYVC/4xzO/+QeUn/iHVJ/2xfVf9xZVn/fW1f/3dlU/+Vh3P/RTku/1ZINP9ZSzj/T0Q2/15Y
+        Vf+6rY7/moRO/4h1Uv92Z0z/c2ZK/2BUQf9lWEP/a19I/35sSf+ynF//sJpl/5WQif8yKCX/i3lC/5B+
+        Pf9SNxf/tZxb/7aVTP+GZSj/knxK/5N9Sv+IdUj/cGFV/4yAc/9zZl3/e2pa/6GSf/9gU0j/STou/2dU
+        Of9OQzz/ZF5Y/7Kliv+Nd0r/gG5R/25hS/9kWEX/X1JC/2JVQf9oXEb/f21J/8+5dP+qlWX/mJON/zUt
+        K/+IfEr/iXY4/5N1R/+lhkn/m3w7/8Wpaf+TcCT/pY5U/4RxRv+XiXr/eGVU/3BgT/+Pfm//eWxj/7Wj
+        iv9mTzb/XE07/1NHPf9mYVz/sKOH/4lzR/94a1H/a19J/2VZRv9cUUH/YFRB/2lcRf9wY0j/dWE//5aF
+        YP+emZL/ODAx/1JIPf9lTyf/l3U+//DUgf/GqV7/kGgc/+bShv/Uu2z/l4FM/3tsYP+CcGL/g3Jj/3Be
+        T/96bF//sZx+/3VaOf9pWD3/VUpC/2tmYf+uoYj/fmlC/3FlTv9oXUn/Y1dE/1xRQP9eUkD/ZVlE/2xf
+        R/9wYUb/j39d/6Cclv8/Nzb/VkpA/3pbL/+3jDn/2rdj/62HQ/+pjFT/x6ZW/72fVf+UgFH/empe/4d0
+        Yf+BdGb/hnZm/6mglP+nj3P/nXs+/52GUv9jU0L/c25m/7api/+TfUf/eWpL/2RZRf9gVEP/WU4//1lO
+        P/9hVUP/Z1tF/2tdRP+Ielz/paGa/0I7O/9eU0X/YE83/2FHLv+ukmD/pIpO/7WZVP+efT7/iG8+/497
+        U/90Zlr/dWld/4V3Zf+llYP/mIt7/4dzYv+Oc0X/n4ZS/2dYSP95dG3/rKCJ/4x3R/+AcVL/X1RB/11R
+        Qf9XSz7/V0w+/19UQv9mWkX/aVxF/35wVv+vqaD/S0NB/1xSR/+Rf0z/iXM2/39nRP+2nWj/0bdv/66M
+        RP+eil3/jnpU/35uYf+IeGv/nIt7/4p2Yv+voI3/bFc8/3JhSv9nWlD/YlpT/4R/ev+gloX/W0w1/2RX
+        RP9gVEL/Wk8//1VKPP9USTz/W1BB/2FWRP9nXEb/aVtB/724q/9hWVf/ZlxH/6aUXv+Vg1D/VkEy/6KL
+        XP+qjFD/pIpN/6KIWf+8onH/tqSR/5GDdf+ejoD/0cGh/7WZX/9uXkz/gHBT/3JoYP9lXFT/oZ2Z/42C
+        bv9eUDn/YlZD/1tQQP9YTD//VEg8/1RJPP9ZTkD/XVND/2VZRv9fUzr/l455/66rpv9MQz7/bmNL/2Zb
+        Tf9gVk7/ZVRB/6CQbf+5pXL/uZxg/7ykeP+5po3/sJ+M/7Kll/+eiWf/hnJV/3BmXv90amL/bWNb/394
+        df+4s6n/YlU7/2FVQf9dUUD/WU4//1VLPf9SRjr/Ukc7/1dMPv9bUEH/YFVD/2ZaRv9gUzn/qqKP/6il
+        of9lX1z/XlVQ/11VT/9dVE3/Vkg//2hYRf+Hdlv/YFBC/21eT/+BcmP/YVJG/2NXT/9qYVr/b2Zd/3Jp
+        Yv+KhYL/ubau/3ZpUP9dUTr/XlNB/1pPP/9YTD7/VEk9/09FOP9RRTn/VUo9/1dMP/9aT0D/X1RC/2NX
+        Qv9gUzn/k4p0/7WxpP+ppZv/oJyT/6Kelf+loZj/oZyS/52Xjv+hnJT/npqQ/52Yj/+mopn/pKCW/6Ke
+        lf+inpb/q6ac/6ScjP9tX0b/XlE6/19UQf9aTz7/WE0//1VKPv9RRzv/TUQ4/09FOf9RRzv/U0o9/1ZM
+        P/9YTj//XFFA/2NXRP9bTjj/ZVc9/3ptU/9/clX/gHJV/4JzVf+DdVX/hXdW/4V2VP+FdVT/hnZV/4V1
+        VP+Cc1T/f3FU/3tuVP9sX0X/Wkwz/11RPP9eU0H/WU4//1dMPv9USj3/Ukk8/09FOv9NRDn/TEE1/09F
+        Ov9TSDz/U0s+/1ZNP/9ZTT//W1BA/19VQ/9gVUL/XlI9/2BTPf9hVDz/YlU8/2NVPP9jVTz/Y1U8/2RV
+        O/9kVjv/YlQ7/2BSO/9eUjv/XVA8/11SPv9eU0H/WU4+/1hNP/9XTD7/VEk8/1JIPP9RRzv/TUQ4/0tC
+        Nv9LQDP/TUM3/1BGO/9SSD3/U0k9/1RLPv9XTj//WlFA/1xSQf9dUkH/XVNB/19UQf9fVEH/YFVB/2BV
+        QP9gVD//YFRA/2BUQf9fVED/XlJB/1xRQP9bUED/WU4//1hMP/9WSz7/VUo9/1NIPP9RRjv/UUc7/09F
+        Ov9NQzf/SkE0/0k9Mf9MQTX/TUI4/1BFOv9QRTv/UUc7/1NJPf9TSjz/VUw9/1dMPv9XTT3/WU4+/1lO
+        Pv9ZTj7/WU49/1lOPv9ZTj3/WE49/1hOPv9XTD3/Vks8/1ZLPf9TSTz/Ukc6/1NIO/9QRjr/TkQ4/01D
+        OP9NQzf/TEI3/0tBNf9IPjL/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=
+</value>
+  </data>
 </root>
